--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-praise",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description":
-    "A React binding for Praise (https://github.com/TejasQ/praise)",
+    "A React binding for Praise. (https://github.com/TejasQ/praise)",
   "main": "dist/react-praise.js",
   "author": "Tejas Kumar <tejas@tejas.qa>",
   "license": "MIT",
